--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,17 @@
             <artifactId>h2</artifactId>
             <version>1.4.193</version>
         </dependency>
+        <!--guava i mockito są potrzebne do gry Sud_Game-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
     </dependencies>
 
 </project>
